--- a/content/locale/ru/faq.xml
+++ b/content/locale/ru/faq.xml
@@ -36,7 +36,9 @@
 			<xhtml:ul>
 				<xhtml:li><xhtml:a href="#module=CrossTable">CrossTable</xhtml:a></xhtml:li>
 				<xhtml:li><xhtml:a href="#module=ExtraPlayerInfo">ExtraPlayerInfo</xhtml:a></xhtml:li>
+				<xhtml:li><xhtml:a href="#module=MyMonitor">MyMonitor</xhtml:a></xhtml:li>
 				<xhtml:li><xhtml:a href="#module=NtPeek">NtPeek</xhtml:a></xhtml:li>
+				<xhtml:li><xhtml:a href="#module=SeriesFlags">SeriesFlags</xhtml:a></xhtml:li>
 			</xhtml:ul>
 			<xhtml:p>
 				Модули, которые могут предоставлять дополнительную информацию, если они могут получить данные от Hattrick:
@@ -64,8 +66,8 @@
 				Как было сказано выше, никакие личные данные не передаются.
 			</xhtml:p>
 			<xhtml:p>
-				Единственное исключение — модули <xhtml:a href="#module=HTMSPoints">HTMSPoints</xhtml:a> и <xhtml:a href="#module=htmsStatistics">htmsStatistics</xhtml:a>,
-				в которых навыки игроков и рейтинги, показанные в матчах, передаются на сайт <xhtml:a href="http://www.fantamondi.it/HTMS/index.php?page=home&amp;lang=en">Hattrick Match Statistics</xhtml:a>.
+				Единственное исключение — модуль <xhtml:a href="#module=htmsStatistics">htmsStatistics</xhtml:a>,
+				в котором рейтинги, показанные в матчах, передаются на сайт <xhtml:a href="http://www.fantamondi.it/HTMS/index.php?page=home&amp;lang=en">Hattrick Match Statistics</xhtml:a> с использованием XMLHttpRequest.
 			</xhtml:p>
 		</answer>
 	</item>
