Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6277 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -362,8 +362,7 @@ foxtrick.FriendlyInterface.NtLinkForNtPlayer.desc=Прикажи име држа
 foxtrick.FriendlyInterface.HideAnswerTo.desc=Сакриј линк "Коментар" у књизи гостију
 foxtrick.FriendlyInterface.HideSpeechlessSecretary.desc=Сакриј секретарицу ако нема никакву поруку
 foxtrick.MyMonitor.desc=Пратите скорашње мечеве одабраних тимова на страници Мој Хеттрик
-
-# -----------------------------------------------------------------------------
+foxtrick.MarkAllAsRead.desc=Дугме за означавање свих тема на форуму као прочитане
 
 
 # IN-GAME STRINGS. translate first
@@ -863,9 +862,20 @@ CrossTable.round=K%s
 CrossTable.noMatches=Још увек нема одиграних мечева.
 
 # MyMonitor
-MyMonitor.header=Мечеви које пратим
-MyMonitor.inputTeamId=Убаците ИД тима чије мечеве желите да пратите:
+MyMonitor.header=Мој монитор
 MyMonitor.removeTeam=Изаберите тим који желите да уклоните са листе за праћење:
+MyMonitor.add=Убаци у монитор
+MyMonitor.remove=Избаци из монитора
+MyMonitor.addHelp=Прво идите на страницу тима којег желите да пратите. У менију са десне стране ћете наћи линк за убацивање у монитор.
+
+# %n, %t and %i will be replaced by team name, type and ID respectively
+MyMonitor.removeTeamFormat=%n (%t, #%i)
+MyMonitor.type.senior=Сениори
+MyMonitor.type.youth=Омладинци
+MyMonitor.type.nt=Репрезентација
+
+# MarkAllAsRead
+MarkAllAsRead.title=Означи све теме у свим форумима као прочитане
 
 #actions
 Copy=Копирај
