Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6292 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -363,6 +363,10 @@ foxtrick.FriendlyInterface.HideAnswerTo.desc=Сакриј линк "Комент
 foxtrick.FriendlyInterface.HideSpeechlessSecretary.desc=Сакриј секретарицу ако нема никакву поруку
 foxtrick.MyMonitor.desc=Пратите скорашње мечеве одабраних тимова на страници Мој Хеттрик
 foxtrick.MarkAllAsRead.desc=Дугме за означавање свих тема на форуму као прочитане
+foxtrick.ShowFriendlyBooked.desc=Прикажи на страници лиге тимове који су заказали пријатељску утакмицу
+
+
+# -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
@@ -821,6 +825,9 @@ CurrentBidderShort.abbr=НП
 Senior=Сениори
 Youth=Омладинци
 
+team.status.booked=Заказао је пријатељску за ову недељу
+
+
 # transferresultsearchfilters
 TransferSearchResultFilters.hide_bruised=Сакриј угруване
 TransferSearchResultFilters.hide_injured=Сакриј повређене
@@ -891,7 +898,13 @@ button.add=Додај
 button.remove=Уклони
 button.authorize=Дозволи
 
-Loading=Учитавање у току…
+
+status.loading=Учитавање у току…
+status.loading.abbr=…
+status.error=Дошло је до грешке
+status.error.abbr=!
+
+Loading=
 oauth.authorize=Молимо вас да дозволите Фокстрику приступ подацима о вашем тиму!
 oauth.instructions=Ускоро ће вам се појавити линк ка страници чија адреса почиње са "chpp.hattrick.org". Молимо вас да отворите ту страницу и унесете ваше корисничко име и лозинку на Хеттрику како би добили ваш лични идентикациони број(PIN). Потом у поље испод, унесите свој PIN да дозволите Фокстрику да преузима податке о вашем тиму.
 oauth.why=Зашто треба да дозволим Фокстрику приступ подацима о мом тиму?
