Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6306 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -903,8 +903,9 @@ status.loading=Учитавање у току…
 status.loading.abbr=…
 status.error=Дошло је до грешке
 status.error.abbr=!
+status.unknown=Непознат
+status.unknown.abbr=?
 
-Loading=
 oauth.authorize=Молимо вас да дозволите Фокстрику приступ подацима о вашем тиму!
 oauth.instructions=Ускоро ће вам се појавити линк ка страници чија адреса почиње са "chpp.hattrick.org". Молимо вас да отворите ту страницу и унесете ваше корисничко име и лозинку на Хеттрику како би добили ваш лични идентикациони број(PIN). Потом у поље испод, унесите свој PIN да дозволите Фокстрику да преузима податке о вашем тиму.
 oauth.why=Зашто треба да дозволим Фокстрику приступ подацима о мом тиму?
@@ -927,16 +928,20 @@ status.enabled=укључен, али неактиван на %s
 status.disabled=искључен
 
 prefs.screenshot=Слика са објашњењима опција за модул
-foxtrick.prefs.MainTab=Главне опције
-foxtrick.prefs.ShortcutsTab=Пречице и додаци
-foxtrick.prefs.PresentationTab=Изглед и алати
-foxtrick.prefs.MatchesTab=Мечеви
-foxtrick.prefs.ForumTab=Форум
-foxtrick.prefs.LinksTab=Линкови
-foxtrick.prefs.AlertTab=Обавештења
-foxtrick.prefs.AboutTab=О Фокстрику
-foxtrick.prefs.ChangesTab=Промене
-foxtrick.prefs.HelpTab=Помоћ
+
+# tabs in preferences page
+tab.main=Главне опције
+tab.informationAggregation=Додатне информације
+tab.shortcutsAndTweaks=Пречице и додаци
+tab.presentation=Изглед и алати
+tab.matche=Мечеви
+tab.forum=Форум
+tab.links=Линкови
+tab.alert=Обавештења
+tab.about=О Фокстрику
+tab.changes=Промене
+tab.help=Помоћ
+
 foxtrick.prefs.basicPreferences=Основна подешавања
 foxtrick.prefs.captionHTLanguage=Подешавање језика
 foxtrick.prefs.captionHTDateformat=Подешавање формата датума
