Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6307 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -934,7 +934,7 @@ tab.main=Главне опције
 tab.informationAggregation=Додатне информације
 tab.shortcutsAndTweaks=Пречице и додаци
 tab.presentation=Изглед и алати
-tab.matche=Мечеви
+tab.matches=Мечеви
 tab.forum=Форум
 tab.links=Линкови
 tab.alert=Обавештења
