Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6314 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -236,7 +236,7 @@ foxtrick.CopyMatchID.desc=Копира ИД меча када се кликне 
 foxtrick.HeaderFix.desc=Фиксира заглавље и хоризонтални мени, док се остатак странице може скроловати.
 foxtrick.HeaderFix.FixLeft.desc=Фиксира и вертикални подмени при скроловањy.
 foxtrick.CopyRatings.desc=Додаје линкове 'Копирај' на страници извештаја са утакмице, уз помоћ којих можете ископирати оцене у меморију (у стилу ХТ-табеле прилагођене за поруке на форуму).
-foxtrick.GoaldifferenceToTables.desc=Убацује додатну колону за гол разлику у табели за промоцију као и у Старим табелама лиге.
+foxtrick.GoalDifferenceToTables.desc=Убацује додатну колону за гол разлику у табели за промоцију као и у Старим табелама лиге.
 foxtrick.CrossTable.desc=Убацује додатну табелу са резултатима на страници 'Распоред' у свакој лиги, као и график позиције у лиги.
 foxtrick.ElectionTable.desc=Додаје проценте и укупан број гласача за првопласираних 30 кандидата на страници за изборе.
 foxtrick.ContextMenuCopy.desc=Додаје опцију контекст менију(десни клик мишем) за копирање ИД-ова, линкова и осталог садржаја на Хеттрик страницама у HT-ML формату за постовање на Форуму.
@@ -244,10 +244,7 @@ foxtrick.ContextMenuCopy.Id.desc=Опција за копирање ИД-а.
 foxtrick.ContextMenuCopy.Link.desc=Опција за копирање линкова у HT-ML формату.
 foxtrick.ContextMenuCopy.HtMl.desc=Опција за копирање селектованог садржаја у HT-ML формату.
 foxtrick.ContextMenuCopy.Table.desc=Опција за копирање табела у HT-ML формату.
-foxtrick.NewMail.desc=Означава када примите нову ХТ поруку.
-foxtrick.NewMail.CustomColor.desc=Сами одредите боју за број који означава новопристигле ХТ поруке. Потребно је и да рестартујете Фајерфокс да би прихватили промене.
-foxtrick.NewMail.HighlightNewMailIcon.desc=Осенчи иконицу за нову поруку црвеном бојом. Потребно је и да рестартујете Фајерфокс да би прихватили промене.
-foxtrick.NewMail.HighlightNewForum.desc=Означи број нових порука на форуму у хоризонталном менију.
+foxtrick.NewMail.desc=Означава када примите нову ХТ или поруку на форуму.
 foxtrick.CopyTrainingReport.desc=На страници треннга за омладинску академију додаје дугме за копирање извештаја са тренинга (за употребу у Hattrick Youthclub-у)
 foxtrick.CopyTrainingReport.OpenHTYpage.desc=Отвори hattrick-youthclub страницу после копирања.
 foxtrick.CopyScoutReport.desc=На страници играча омладинскe академијe додаје дугме за копирање коментарa ловца на таленте (за употребу у Hattrick Youthclub-у)
@@ -320,7 +317,7 @@ foxtrick.CountryList.HideFlagOntop.desc=Уклања заставицу држа
 foxtrick.MatchTables.desc=Уклања празан простор на страницама Тренутних и Архиве мечева на једноставној ХТ теми.
 foxtrick.MatchTables.RemoveTime.desc=Уклања време одигравања на страници Актуелних мечева.
 foxtrick.YouthPromotes.desc=Показује број дана до промоције омладинског играча.
-foxtrick.htmsStatistics.desc=Додаје статистику за резултате мечева.
+HTMSPrediction.desc=Додаје статистику за резултате мечева.
 foxtrick.HighlightOwnerless.desc=Означава 'ботове' и тимове без власника на страници лиге.
 foxtrick.LastLogin.desc=На страници корисника приказује протекло време од последњег логовања.
 foxtrick.TransferCompareSort.desc=Кликом на заглавље можете сортирати резултате 'Трансфер поређења' по ТСИ, цени и форми играча.
@@ -851,11 +848,11 @@ foxtrick.LeagueAndMatchChat.CupChat=Нон ХТ куп чет
 foxtrick.LeagueAndMatchChat.FederationChat=Нон ХТ федерацијски чет
 
 
-#htms
-foxtrick.htmsStatistics.prediction=Претпостав. резултат
-foxtrick.htmsStatistics.windrawloss=победа/нереш./пораз
-foxtrick.htmsStatistics.linkcaption=HTMS меч анализа
-foxtrick.htmsStatistics.changePrediction=Промени предвиђање
+#HTMSPrediction
+HTMSPrediction.prediction=Претпостав. резултат
+HTMSPrediction.winDrawLoss=победа/нереш./пораз
+HTMSPrediction.title=HTMS меч анализа
+HTMSPrediction.changePrediction=Промени предвиђање
 
 # HTMSPoints
 HTMSPoints=HTMS-бодови:
