Ro Language update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6316 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -16,7 +16,6 @@ foxtrick.SmallerPages.desc=Reduce dimensiunile unor pagini pentru a fi adaptate 
 foxtrick.SmallerPages.ReduceBid.desc=Muta bidul langa skilluri si scoate denumirea calitatilor lasand calitatile sub forma de numere
 foxtrick.ForumTemplates.desc=Permite transformarea posturilor din forumuri in sabloane pentru a putea fi utilizate ulterior
 foxtrick.ForumTemplates.DefaultShow.desc=Afiseaza sau ascunde sabloanele proprii
-foxtrick.ForumTemplates.CustomWidth.desc=Utilizati latime personalizata pentru afisarea numelui sabloanelor (implicit 125(px))
 foxtrick.ForumPreview.desc=Permite afisarea unui post de previzualizare (functioneaza si pentru mailuri)
 foxtrick.HideManagerAvatar.desc=Ascunde avatarul de pe forum, dar nu si linkurile catre serie si user
 foxtrick.AddLeaveConfButton.desc=Adauga un buton 'Paraseste forumul' pentru fiecare fiecare forum in parte
@@ -27,6 +26,14 @@ foxtrick.AttVsDef.oldstyle.desc=Stilul vechi
 foxtrick.AttVsDef.newstyle.desc=Stilul nou
 foxtrick.AttVsDef.oldstyleifkseparated.desc=Stilul vechi (fazele fixe separate)
 foxtrick.Ratings.desc=Adauga ratinguri la pagina meciului
+foxtrick.Ratings.HatStats.desc=HatStats
+foxtrick.Ratings.HatStatsDetailed.desc=HatStats (detaliat)
+foxtrick.Ratings.HatStatsSeparated.desc=HatStats separat per rating
+foxtrick.Ratings.LoddarStats.desc=LoddarStats
+foxtrick.Ratings.PeasoStats.desc=PeasoStats
+foxtrick.Ratings.VnukStats.desc=VnukStats
+foxtrick.Ratings.HTitaVal.desc=HTitaVal
+foxtrick.Ratings.GardierStats.desc=GardierStats
 foxtrick.BookmarkAdjust.desc=Modificati culoarea bookmark-ului inserand in comentariul bookmark-ului codul corespunzator intre paranteze patrate: de exemplu: [cyan] va arata pictograma cyan. Valori posibile: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow.
 foxtrick.FoxtrickAlert.desc=Afiseaza o notificare de tip pop-up cu Hattrick News Ticker, chiar si atunci cand faceti altceva ceva in momentul respectiv (de asemenea reda un sunet la evenimente din ticker)
 foxtrick.FoxtrickAlert.NewMail.desc=Notificare de tip pop-up in cazul primirii unor mesaje noi (non-supporteri)
@@ -164,8 +171,7 @@ foxtrick.PlayerFilters.desc=Adauga o casuta de selectare pentru a filtra jucator
 foxtrick.HistoryStats.desc=Realizeaza o imagine de ansablu a istoriei echipei.
 foxtrick.LargeFlags.desc=Mareste steagul pe pagina jucatorului daca fetele sunt folosite.
 foxtrick.GoToPostBox.desc=Adauga o casuta MergiLaX in forumuri
-foxtrick.TeamSelectBox.desc=Inlocuieste lista jucatorilor cu o casuta de selectare in pagina jucatorilor. Dand click pe header va schimba intre lista sau cauta de selectare.
-foxtrick.TeamSelectBox.AlsoYouthPlayers.desc=Adauga de asemenea o casuta de selectare in pagina jucatorilor la tineret
+foxtrick.TeamSelectBox.desc=Inlocuieste lista  cu jucatori cu o casuta de selectare a jucatorilor. Dand click pe antetul casutei va schimba intre lista si casuta de selectare.
 foxtrick.CopyPlayerAd.desc=Un buton pe pagina jucatorului pentru a putea copia un detaliile unui jucator in clipboard (format ht-ml)
 foxtrick.CopyPlayerAd.Sorted.desc=Sorteaza calitatile in ordine descrescatoare.
 foxtrick.CopyPlayerAd.NonTableStyle.desc=Copiaza fara tabel.
@@ -229,7 +235,7 @@ foxtrick.CopyMatchID.desc=Copiaza ID-ul meciului cand dai click pe pictograma me
 foxtrick.HeaderFix.desc=Fixeaza antetul in timpul scrollului
 foxtrick.HeaderFix.FixLeft.desc=De asemenea fixeaza submeniul in timpul scrollului
 foxtrick.CopyRatings.desc=Adauga linkuri pe pagina cu raportul meciului astfel incat sa poti copia ratingurile in clipboard (in HT-ML)
-foxtrick.GoaldifferenceToTables.desc=Adauga o coloana cu golaverajul la tabelul de promovari si la vechiile clasamente ale seriei
+foxtrick.GoalDifferenceToTables.desc=Adauga o coloana cu golaverajul la tabelul de promovari si la vechiile clasamente ale seriei
 foxtrick.CrossTable.desc=Adauga un tabel in plus la Meciuri viitoare, unde toate rezultatele din meciurile ligii sunt prezentate
 foxtrick.ElectionTable.desc=Adauga procente la Alegeri (doar voturile afisate sunt calculate, nu toate)
 foxtrick.ContextMenuCopy.desc=Adauga optiuni la meniul de copiere pentru a copia ID si/sau linkuri
@@ -237,10 +243,7 @@ foxtrick.ContextMenuCopy.Id.desc=Optiune pentru a copia ID
 foxtrick.ContextMenuCopy.Link.desc=Optiune pentru a copia locatia linkului in HT-ML
 foxtrick.ContextMenuCopy.HtMl.desc=Optiune pentru a copia continutul selectat in HT-ML
 foxtrick.ContextMenuCopy.Table.desc=Optiune pentru a copia tabelul in HT-ML
-foxtrick.NewMail.desc=Evidentiere mesaje noi
-foxtrick.NewMail.CustomColor.desc=Diferite culori pentru mesaje noi. Poate necesita restarea browserului
-foxtrick.NewMail.HighlightNewMailIcon.desc=Afiseaza iconita de mesaje noi in rosu. Poate necesita restarea browserului
-foxtrick.NewMail.HighlightNewForum.desc=Evidentiaza mesajele noi de pe forum in meniu
+foxtrick.NewMail.desc=Evidentiaza numerotarea mesajelor noi din casuta de mesaj si forum
 foxtrick.CopyTrainingReport.desc=Adauga un buton Copiaza Raport Antrenament (ce urmeaza a fi folosit in Hattrick Youth Club) la pagina antrenamentului la juniori
 foxtrick.CopyTrainingReport.OpenHTYpage.desc=Deschide intr-un tab nou hattick-youthclub.org dupa copiere
 foxtrick.CopyScoutReport.desc=Adauga un buton Copiaza comentarii Cautator de Talente (ce urmeaza a fi folosit in Hattrick Youth Club)la pagina detaliata a juniorului
@@ -310,7 +313,7 @@ foxtrick.MatchIncome.desc=Venituri meci in pagina detaliata a meciului
 foxtrick.YouthSkillHideUnknown.desc=Mai mult spatiu la pagina juniorilor
 foxtrick.YouthSkillHideUnknown.desc=Ascunde calitatile juniorilor care sunt necunoscute
 foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Ascunde cuvantul 'maxim' pentru a castiga spatiu
-foxtrick.SkillTable.desc=Arata calitatile jucatorilor sub forma unui tabel. Folositi modulul "ExtraPlayerInfo" pentru a arata informatii suplimentare.
+foxtrick.SkillTable.desc=Arata calitatile jucatorilor sub forma unui tabel.
 foxtrick.SkillTable.OtherTeams.desc=Activeaza si pentru alte echipe
 foxtrick.HighlightCupwins.desc=Evidentiaza echipele castigatoare in meciurile din cupa pe pagina meciurilor de cupa
 foxtrick.HighlightCupwins.highlight_outsider.desc=Evidentiaza meciurile castiga de echipe cu rank mai mic
@@ -325,7 +328,7 @@ foxtrick.CountryList.HideFlagOntop.desc=Inlatura linkul catre liga de pe pagina 
 foxtrick.MatchTables.desc=Inlatura spatiul alb la tabelul meciurilor pe designul simplu
 foxtrick.MatchTables.RemoveTime.desc=Inlatura ora meciului in tabelul curent al meciurilor
 foxtrick.YouthPromotes.desc=Arata numarul de zile pana la promovarea unui junior
-foxtrick.htmsStatistics.desc=Adauga statistici la scorul meciului la meciuri
+foxtrick.HTMSPrediction.desc=Adauga predictie rezultat pe pagina meciurilor
 foxtrick.HighlightOwnerless.desc=Evidentiaza echipele 'bot' in clasamentul ligii
 foxtrick.LastLogin.desc=Arata timpul de la ultima logare pe pagina managerului
 foxtrick.TransferCompareSort.desc=Facand click pe antet se va sorta la Compara transferul dupa ITC, pret sau forma
@@ -344,12 +347,14 @@ foxtrick.ForumThreadAutoIgnore.desc=Ignora automat topicurile cand selectezi tag
 foxtrick.ForumThreadAutoIgnore.Tags.desc=Lista tag-uri, exemple: NT, idee, Bug.
 foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Lista alba a topicurilor dupa ID. Topicurile din lista alba nu vor fi ignorate.
 foxtrick.TableSort.desc=Fac toate tabelele sortabile daca au antet. (inclusiv tabelele de pe forum)
-foxtrick.LiveAlert.desc=Alerteaza golurile din HT Live
-foxtrick.SeriesFlags.desc=Arata seria si steagul langa linkurile userului/seriei (imagini furnizate de HTMS)
+foxtrick.LiveAlert.desc=Alerte pentru golurile din HT Live
+foxtrick.OldStyleFace.desc=Arata fetele in stilul vechi Hattrick
+foxtrick.NtPeek.desc=Afiseaza meciuri NT/U20 pe pagina tarii si Hattrickul meu
+foxtrick.SeriesFlags.desc=Arata steagul langa linkurile user
 foxtrick.SeriesFlags.Guestbook.desc=Arata in cartea de oaspeti
 foxtrick.SeriesFlags.Supporters.desc=Arata in casuta supporterilor echipei
 foxtrick.SeriesFlags.Visitors.desc=Arata casuta vizitatorilor recenti
-foxtrick.SeriesFlags.Oldies.desc=Arata in pagina echipei cu vechii jucatori sau antrenori
+foxtrick.SeriesFlags.CountryOnly.desc=Afiseaza steagul tarii fara numele seriei
 foxtrick.HTMSPoints.desc=Arata punctele de antrenament pentru un jucator calculate cu tabelul calitatilor HTMS
 foxtrick.HTMSPoints.AddToPlayer.desc=Arata pe pagina jucatorului
 foxtrick.HTMSPoints.AddToSearchResult.desc=Arata pe pagina transferurilor
@@ -358,6 +363,10 @@ foxtrick.FriendlyInterface.desc=Modificari pentru a furniza o interfata prieteno
 foxtrick.FriendlyInterface.FullPlayerNameInLineUp.desc=Arata numele jucatorilor fara elipse in pagina ordinelor meciurilor
 foxtrick.FriendlyInterface.NtLinkForNtPlayer.desc=Afiseaza echipele nationale ca linkuri pentru jucatorii din loturile nationale
 foxtrick.FriendlyInterface.HideAnswerTo.desc=Ascunde linkul de a raspunde din cartea de oaspeti
+foxtrick.FriendlyInterface.HideSpeechlessSecretary.desc=Ascunda linkul secretarei daca nu are nimic de raportat
+foxtrick.MyMonitor.desc=Monitorizeaza meciurile recente ale prietenilor si le adauga in Hattrickul meu
+foxtrick.MarkAllAsRead.desc=Un buton pentru a marca toate mesajele din forumuri ca citite
+foxtrick.ShowFriendlyBooked.desc=Afiseaza daca o echipa si-a programat amical pe pagina seriei
 -----------------------------------------------------------------------------
 
 
@@ -607,6 +616,7 @@ Current_league.abbr=Liga
 foxtrick.matchdetail.midfield=Mijloc
 foxtrick.matchdetail.attack=Atac
 foxtrick.matchdetail.defence=Aparare
+foxtrick.matchdetail.total=Total
 foxtrick.shortcut.matchlineup=Asezare
 
 foxtrick.matchdetail.right=Dreapta
@@ -651,7 +661,6 @@ foxtrick.defensiveTrainer=Un antrenor %s care este adept al apararii.
 foxtrick.offensiveTrainer=Un antrenor %s care este adept al atacului.
 foxtrick.balancedTrainer=Un antrenor %s care nu este nici adept al atacului, nici al apararii.
 
-ntpeek.title=Meciuri nationale recente
 
 htLive=HT Live
 
@@ -672,9 +681,6 @@ FoxtrickFirstRunReleaseNotesLink=http://www.ht-foxtrick.com/forum/viewforum.php?
 FoxtrickFirstRunHelpPage=Forum ajutor FoxTrick (Engleza, Germana, Spaniola, Italiana):
 FoxtrickFirstRunHelpPageLink=/Forum/Read.aspx?t=13254684
 
-StyleTutorial.title=Styling FoxTrick
-StyleTutorial.content=FoxTrick oferta un set de inferfete de prezentare pentru useri pentru a-si personaliza stilurile proprii.\n Aceste interfete sunt oferite prin intermediul claselor si idurilor HTML si ai putea utiliza CSS pentru a defini stilul preferat.\n Un exemplu de stil poate fi gasit la %s si poate fi modificat pentru a-ti satisface nevoile.\n Dupa salvarea fisierului poti utiliza modulul SkinPlugin pentru a incarca fisierul CSS pentru ca stilul sa aiba efect.
-
 Coach=Antrenor
 
 # NOTE TO TRANSLATORS
@@ -685,8 +691,14 @@ foxtrick.tweaks.overview=Lista jucătorilor
 foxtrick.tweaks.writeinguestbook=Scrie in Cartea de Oaspeti
 foxtrick.tweaks.copyplayerad=Copiaza jucatorul in clipboard
 foxtrick.tweaks.copied=Jucatorul a fost copiat in clipboard
-HatStatsDetailed=HatStats (detaliat)
-HatStatsTotalOnly=HatStats (doar total)
+
+ratings.HatStats=HatStats
+ratings.LoddarStats=LoddarStats
+ratings.PeasoStats=PeasoStats
+ratings.VnukStats=VnukStats
+ratings.HTitaVal=HTitaVal
+ratings.GardierStats=GardierStats
+
 foxtrick.tweaks.copyratings.both=Copiaza ratingurile (stil HT-ML)
 foxtrick.tweaks.copyratings.home=Copiaza ratingurile echipei gazda (stil HT-ML)
 foxtrick.tweaks.copyratings.away=Copiaza ratingurile echipe vizitatoare (stil HT-ML)
@@ -790,6 +802,8 @@ CurrentBidderShort.abbr=Of
 Senior=Seniori
 Youth=Juniori
 
+team.status.booked=Friendly booked
+
 # TransferSearchResultFilters
 TransferSearchResultFilters.hide_bruised=Ascunde plasturele
 TransferSearchResultFilters.hide_injured=Ascunde accidentarea
@@ -812,12 +826,11 @@ foxtrick.LeagueAndMatchChat.LeagueChat=Chat non HT Liga
 foxtrick.LeagueAndMatchChat.CupChat=Chat non HT Cupa
 foxtrick.LeagueAndMatchChat.FederationChat=Chat non HT Federatie
 
-
-#htms
-foxtrick.htmsStatistics.prediction=Rezultat prevazut
-foxtrick.htmsStatistics.windrawloss=Victorie/Egalitate/Infrangere
-foxtrick.htmsStatistics.linkcaption=Analiza meci realizate de HTMS
-foxtrick.htmsStatistics.changePrediction=Schimba previziunea
+# HTMSPrediction
+HTMSPrediction.prediction=Rezultat prevazut
+HTMSPrediction.winDrawLoss=Victorie/Egalitate/Infrangere
+HTMSPrediction.title=Analiza meci realizate de HTMS
+HTMSPrediction.changePrediction=Schimba previziunea
 
 # HTMSPoints
 HTMSPoints=Puncte HTMS:
@@ -828,6 +841,22 @@ CrossTable.graph=Graficul sezonului
 CrossTable.table=Tabel incrucisat
 # will be shown as "R13" denoting round 13
 CrossTable.round=R%s
+CrossTable.noMatches=No matches has been played yet.
+
+# MyMonitor
+MyMonitor.header=Monitorizare
+MyMonitor.add=Adauga la monitorizare
+MyMonitor.remove=Inlatura de la monitorizare
+MyMonitor.addHelp=Mergi la echipa pe care vrei sa o monitorizezi si vei vedea o casuta pe lateral pentru a adauga echipa.
+MyMonitor.removeTeam=Selecteaza o echipa pentru a o inlatura:
+# %n, %t and %i will be replaced by team name, type and ID respectively
+MyMonitor.removeTeamFormat=%n (%t, #%i)
+MyMonitor.type.senior=Seniori
+MyMonitor.type.youth=Juniori
+MyMonitor.type.nt=Nationale
+
+# MarkAllAsRead
+MarkAllAsRead.title=Marcheaza threadurile de pe toate forumurile ca citite
 
 #actions
 Copy=Copiaza
@@ -842,18 +871,30 @@ button.close=Inchide
 button.customize=Modifica
 button.save=Salveaza
 button.go=Go!
+button.add=Adauga
+button.remove=Inlatura
 button.authorize=Autorizeaza
 button.export=Export
 button.import=Import
 button.restoreDefault=Restaureaza setarile implicite
 button.disableAll=Dezactiveaza toate
 
-Loading=Incarca…
+status.loading=Incarca…
+status.loading.abbr=…
+status.error=Eroare
+status.error.abbr=!
+status.unknown=Necunoscut
+status.unknown.abbr=?
 
 oauth.authorize=Autorizeaza FoxTrick pentru a accesa datele echipei tale
-oauth.instructions=O noua pagina se va deschide in curand. Te rog adauga utilizatorul si parola pentru Hattrick pentru a obtine un cod de verificare. Copiaza codul de verificare aici pentru a autoriza FoxTrick sa acceseze datele echipei tale:
+oauth.instructions=Va aparea un link catre chpp.hattrick.org.\nDeschide linkul, introdu usernameul si parola pentru a primi un cod de verificare pe care sa il copiezi mai tarziu pentru a autoriza FoxTrick sa-ti acceseze datele echipei. \nFoxTrick nu va stii niciodata parola ta.
+oauth.why=De ce as autoriza FoxTrick?
+oauth.link=Primeste codul de verificare de la chpp.hattrick.org
 oauth.success=FoxTrick a fost autorizat! Te rog reincarca aceasta pagina pentru a vedea informatii detaliate oferite de FoxTrick.
-oauth.unauthorized=Accesul data catre Hattrick nu a reusit. Trebuie sa autorizezi FoxTrick sa acceseze datele echipei intai.
+
+api.failure=Accesul catre datele hattrick a esuat. Trebuie sa autorizezi FoxTrick pentru a accesa datele echipei tale. Daca ai facut-o deja, verifica reteaua sau incearca mai tarziu.
+
+exception.error=Error %s
 
 # End of IN-GAME STRINGS.
 
@@ -868,16 +909,21 @@ status.active=Activ
 status.enabled=Activat, dar nu este activ in %s
 status.disabled=Dezactivat
 
-foxtrick.prefs.MainTab=Setari
-foxtrick.prefs.ShortcutsTab=Scurtaturi
-foxtrick.prefs.PresentationTab=Prezentare
-foxtrick.prefs.MatchesTab=Meciuri
-foxtrick.prefs.ForumTab=Forum
-foxtrick.prefs.LinksTab=Linkuri
-foxtrick.prefs.AlertTab=Alerte
-foxtrick.prefs.AboutTab=Despre
-foxtrick.prefs.ChangesTab=Modificari
-foxtrick.prefs.HelpTab=Ajutor
+prefs.screenshot=Screenshot
+
+# tabs in preferences page
+tab.main=Principala
+tab.informationAggregation=Informatii agregare
+tab.shortcutsAndTweaks=Scurtaturi
+tab.presentation=Prezentare
+tab.matches=Meciuri
+tab.forum=Forum
+tab.links=Linkuri
+tab.alert=Alerte
+tab.about=Despre
+tab.changes=Modificari
+tab.help=Ajutor
+
 foxtrick.prefs.basicPreferences=Preferinte de baza
 foxtrick.prefs.captionHTLanguage=Setari limba
 foxtrick.prefs.captionHTDateformat=Setari format data
