--- a/content/locale/pt/foxtrick.properties
+++ b/content/locale/pt/foxtrick.properties
@@ -364,7 +364,7 @@ Coach=Treinador
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
 foxtrick.tweaks.actions=Acções
 # Look on your players page (Club -> Players) to the box title on the right with the list of players
-foxtrick.tweaks.overview=Síntese
+foxtrick.tweaks.overview=Plantel
 foxtrick.tweaks.Really_bid=Deseja mesmo licitar
 foxtrick.tweaks.twoweekbalance=Balanço das duas semanas
 foxtrick.tweaks.writeinguestbook=Escrever no livro de visitas
