Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6364 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -870,7 +870,7 @@ ticker.type.challenge=Изазов
 ticker.type.guestbook=Књига гостију
 ticker.type.mail=ХТ порука
 ticker.type.myht=Мој Хеттрик вести  
-
+ticker.type.others=Sistemske informacije
 
 #actions
 Copy=Копирај
