Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6367 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -482,6 +482,17 @@ foxtrick.datetimestrings.short_days=д
 transfercompare_medianprice=Медијан цена
 transfercompare_avgprice=Просечна цена
 
+match.type.league=Лига
+match.type.qualification=Бараж
+match.type.cup=Куп
+match.type.friendly=Пријатељска
+match.type.friendly.cup=Пријатељска (Куп правила)
+match.type.masters=Хеттрик Мастерс
+match.type.nt.friendly=Пријатељска (репрезентација)
+match.type.nt.competitive=Светски Куп
+match.type.youth.league=Омладинска лига
+match.type.youth.friendly=Омладинска пријатељска
+match.type.youth.friendly.cup=Омладинска пријатељска (Куп правила)
 
 #YouthPromote
 Notes_about_skills=Белешке о вештинама
