Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6368 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -902,8 +902,8 @@ status.loading=Учитавање у току…
 status.loading.abbr=…
 status.error=Дошло је до грешке
 status.error.abbr=!
-status.unknown=Непознат
-status.unknown.abbr=?
+status.unknown=Екипа тренутно игра меч
+status.unknown.abbr=X
 
 oauth.authorize=Молимо вас да дозволите Фокстрику приступ подацима о вашем тиму!
 oauth.instructions=Ускоро ће вам се појавити линк ка страници чија адреса почиње са "chpp.hattrick.org". Молимо вас да отворите ту страницу и унесете ваше корисничко име и лозинку на Хеттрику како би добили ваш лични идентикациони број(PIN). Потом у поље испод, унесите свој PIN да дозволите Фокстрику да преузима податке о вашем тиму.
