Romanian language update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6372 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -39,23 +39,6 @@ foxtrick.FoxtrickAlert.desc=Afiseaza o notificare de tip pop-up cu Hattrick News
 foxtrick.FoxtrickAlert.NewMail.desc=Notificare de tip pop-up in cazul primirii unor mesaje noi (non-supporteri)
 foxtrick.FoxtrickAlert.NewForum.desc=Notificare de tip pop-up in cazul primirii unor mesaje noi pe forum (non-supporteri)
 foxtrick.AlertCustomSounds.desc=Sunete personalizate pentru alerte. Cele nebifate ruleaza sunetul implicit.
-foxtrick.AlertCustomSounds.LoginWelcome.desc=Mesajul de bun venit
-foxtrick.AlertCustomSounds.LoginSupporters.desc=Logarea supporterilor
-foxtrick.AlertCustomSounds.ForumReplyToMe.desc=Replica pe forum
-foxtrick.AlertCustomSounds.TransferMarket.desc=Lista de transferuri
-foxtrick.AlertCustomSounds.Challenges.desc=Provocari
-foxtrick.AlertCustomSounds.Guestbook.desc=Cartea de Oaspeti
-foxtrick.AlertCustomSounds.MailToMe.desc=Mesaj nou
-foxtrick.AlertCustomSounds.MyHTMessages.desc=Mesaje MyHt
-foxtrick.AlertCustomOff.desc=Fara alerte. Optiunile bifate nu vor avea un slider alerta si nu va rula nici un sunet.
-foxtrick.AlertCustomOff.LoginWelcome.desc=Mesajul de bun venit
-foxtrick.AlertCustomOff.LoginSupporters.desc=Logarea supporterilor
-foxtrick.AlertCustomOff.ForumReplyToMe.desc=Replica pe forum
-foxtrick.AlertCustomOff.TransferMarket.desc=Lista de transferuri
-foxtrick.AlertCustomOff.Challenges.desc=Provocari
-foxtrick.AlertCustomOff.Guestbook.desc=Cartea de Oaspeti
-foxtrick.AlertCustomOff.MailToMe.desc=Mesaj nou
-foxtrick.AlertCustomOff.MyHTMessages.desc=Mesaje MyHt
 foxtrick.MedianTransferPrice.desc=Arata mediana preturilor de transfer in 'Compara transferul'
 foxtrick.FlagCollectionToMap.desc=Arata o harta a lumii cu toate tarile ale caror steaguri le-ati colectat in fiecare categorie
 foxtrick.TransferSearchFilters.desc=Permite adaugarea unor sabloane cu filtre de cautare pentru lista de transferuri
@@ -228,9 +211,10 @@ foxtrick.ExtraShortcuts.Supporterstats.desc=Link catre statistici supporter
 foxtrick.ExtraShortcuts.Transfers.desc=Link catre transferurile proprii
 foxtrick.ExtraShortcuts.Prefs.desc=Link catre pagina preferintelor
 foxtrick.ExtraShortcuts.FoxTrickPrefs.desc=Link catre pagina de preferinte FoxTrick
-foxtrick.ExtraShortcuts.HtRadioWinamp.desc=Link catre Radio Hattrick (Belgia/Olanda) (Winamp)
-foxtrick.ExtraShortcuts.HtRadioMediaPlayer.desc=Link catre Radio Hattrick (Belgia/Olanda) (Windows Media Player)
-foxtrick.ExtraShortcuts.DTRadioWinamp.desc=Link catre Radio downtime (DACHL) (Winamp)
+foxtrick.ExtraShortcuts.HtRadio.desc=HtRadio
+foxtrick.ExtraShortcuts.No9.desc=No9 Radio
+foxtrick.ExtraShortcuts.Latehome.desc=Latehome Radio
+foxtrick.ExtraShortcuts.Balkaradio.desc=Balkaradio
 foxtrick.CopyMatchID.desc=Copiaza ID-ul meciului cand dai click pe pictograma meciurilor liga/cupa/amical sau meciurilor din arhiva. Pentru suporteri functioneaza si pe pagina 'Meciuri directe'
 foxtrick.HeaderFix.desc=Fixeaza antetul in timpul scrollului
 foxtrick.HeaderFix.FixLeft.desc=De asemenea fixeaza submeniul in timpul scrollului
@@ -367,6 +351,7 @@ foxtrick.FriendlyInterface.HideSpeechlessSecretary.desc=Ascunda linkul secretare
 foxtrick.MyMonitor.desc=Monitorizeaza meciurile recente ale prietenilor si le adauga in Hattrickul meu
 foxtrick.MarkAllAsRead.desc=Un buton pentru a marca toate mesajele din forumuri ca citite
 foxtrick.ShowFriendlyBooked.desc=Afiseaza daca o echipa si-a programat amical pe pagina seriei
+foxtrick.TickerAlert.desc=Afiseaza o notificare cand un ticker a venit
 -----------------------------------------------------------------------------
 
 
@@ -504,6 +489,18 @@ foxtrick.datetimestrings.short_days=zil
 #Transfer prices
 transfercompare_medianprice=Pretul median
 transfercompare_avgprice=Pretul mediu
+
+match.type.league=Campionat
+match.type.qualification=Baraj
+match.type.cup=Cupa
+match.type.friendly=Amical
+match.type.friendly.cup=Amical (Reguli cupa)
+match.type.masters=Hattrick Masters
+match.type.nt.friendly=Amical nationale
+match.type.nt.competitive=Cupa mondiala
+match.type.youth.league=Campionat juniori
+match.type.youth.friendly=Amical juniori
+match.type.youth.friendly.cup=Amical juniori (Reguli cupa)
 
 #Skills
 Playmaking=Constructie
@@ -857,6 +854,21 @@ MyMonitor.type.nt=Nationale
 
 # MarkAllAsRead
 MarkAllAsRead.title=Marcheaza threadurile de pe toate forumurile ca citite
+
+# TickerAlert
+TickerAlert.enable=Autorizeaza
+TickerAlert.sound=Sunet
+
+# tickers
+ticker.type.welcome=Mesaj de intampinare
+ticker.type.supporter=Echipele sprijinite s-au logat
+ticker.type.forum=Replici forum
+ticker.type.transfer=Informatii transfer
+ticker.type.challenge=Provocare
+ticker.type.guestbook=Cartea de oaspeti
+ticker.type.mail=HT-Mail
+ticker.type.myht=Mesaj Hattrickul meu
+ticker.type.others=Altele
 
 #actions
 Copy=Copiaza
