--- a/content/locale/en/htlang.xml
+++ b/content/locale/en/htlang.xml
@@ -1,6 +1,7 @@
 <language name="en" desc="English">
 
-	<!-- the 6 strings from the hts menue line. used for language autodetection. copy "value"-->
+	<!-- Menu items in the main menu of Hattrick.
+	     Translate attribute "value" by copying from there in verbatim. -->
 	<MyHattrick value="My Hattrick" />
 	<MyClub value="My Club" />
 	<World value="World" />
@@ -8,7 +9,9 @@
 	<Shop value="Shop" />
 	<Help value="Help" />
 
-	<!-- rating sublevels appearing in match detail page. copy "text" -->
+	<!-- Rating sublevels in match report page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
 	<ratingSubLevels>
 		<sublevel text="(very low)" value="0.0" />
 		<sublevel text="(low)" value="0.25" />
@@ -16,7 +19,9 @@
 		<sublevel text="(very high)" value="0.75" />
 	</ratingSubLevels>
 
-	<!-- tactics appearing in match detail page. copy "value" -->
+	<!-- Tactics in match report page.
+	     Keep attribute "type" unchanged,
+	     translate attribute "value" by copying from there in verbatim. -->
 	<tactics>
 		<tactic type="normal" value="Normal" />
 		<tactic type="pressing" value="Pressing" />
@@ -27,7 +32,10 @@
 		<tactic type="longshots" value="Long shots" />
 	</tactics>
 
-	<!-- positions appearing on players page. copy "value". translate "short" -->
+	<!-- Positions in players page.
+	     Keep attribute "value" unchanged,
+	     translate attribute "type" by copying from there in verbatim,
+	     translate attribute "short" according to your own will. -->
 	<positions>
 		<position type="Keeper" value="Keeper" short="GK" />
 		<position type="Central defender" value="Central defender" short="CD" />
@@ -37,7 +45,10 @@
 		<position type="Forward" value="Forward" short="FW" />
 	</positions>
 
-	<!-- specialties appearing on players page. copy "value". translate "short" -->
+	<!-- Specialities in player page.
+	     Keep attribute "type" unchanged,
+	     translate attribute "value" by copying from there in verbatim,
+	     translate attribute "short" according to your own will. -->
 	<specialties>
 		<specialty type="Unpredictable" value="Unpredictable" short="Un" />
 		<specialty type="Powerful" value="Powerful" short="Po" />
@@ -47,7 +58,9 @@
 		<specialty type="Regainer" value="Regainer" short="Re" />
 	</specialties>
 
-	<!-- levels word connections appearing denominations page. copy "text" -->
+	<!-- Skill levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
 	<levels>
 		<level text="divine" value="20" />
 		<level text="utopian" value="19" />
@@ -72,6 +85,9 @@
 		<level text="non-existent" value="0" />
 	</levels>
 
+	<!-- Agreeability levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
 	<agreeability>
 		<level text="beloved team member" value="5" />
 		<level text="popular guy" value="4" />
@@ -81,6 +97,9 @@
 		<level text="nasty fellow" value="0" />
 	</agreeability>
 
+	<!-- Honesty levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
 	<honesty>
 		<level text="saintly" value="5" />
 		<level text="righteous" value="4" />
@@ -90,6 +109,9 @@
 		<level text="infamous" value="0" />
 	</honesty>
 
+	<!-- Aggressiveness levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
 	<aggressiveness>
 		<level text="unstable" value="5" />
 		<level text="fiery" value="4" />
