htlang.xml: fixes for en and is.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6390 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/en/htlang.xml
+++ b/content/locale/en/htlang.xml
@@ -33,8 +33,8 @@
 	</tactics>
 
 	<!-- Positions in players page.
-	     Keep attribute "value" unchanged,
-	     translate attribute "type" by copying from there in verbatim,
+	     Keep attribute "type" unchanged,
+	     translate attribute "value" by copying from there in verbatim,
 	     translate attribute "short" according to your own will. -->
 	<positions>
 		<position type="Keeper" value="Keeper" short="GK" />
