locale/is: added two comments line 4 and 5
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6392 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/is/foxtrick.properties
+++ b/content/locale/is/foxtrick.properties
@@ -1,6 +1,8 @@
 # ICELANDIC language file
 # utf-8 encoded ICELANDIC MASTER
 # By Developers
+#Translation by LA-LordBastard
+#Translation based on r6388
 
 # Hints:
 # translate the right side of the = sign.
