Added Remove_Teaser_Background option in fix-css-problems module
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6400 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -176,6 +176,7 @@ foxtrick.FixcssProblems.RTL_Fixes.desc=Коригује неке ХТ грешк
 foxtrick.FixcssProblems.ForumScrollBarFix.desc=Додаје кориговани скрол бар страницама форума. Подрхтавање слике је мање него само са укљученом Хеттрик опцијом.
 foxtrick.FixcssProblems.MatchReportRatingsFontFix.desc=Повећава величину фонта за ХТ формат 'small_font'.
 foxtrick.FixcssProblems.RemoveForumSneakPeak.desc=Уклони 'Провири на форум' са свих страница.
+foxtrick.FixcssProblems.Remove_Teaser_Background.desc=Прикажи оригиналну Хеттрик позадину(без црних рупа).
 foxtrick.SimplePresentation.desc=Додатне опције за изглед.
 foxtrick.SimplePresentation.League_Table.desc=Додаје вертикалне линије у табели лиге ради боље прегледности.
 foxtrick.SimplePresentation.Guestbook.desc=Побољшава читљивост порука у књизи гостију (уоквирује поруке сивом подлогом).
@@ -738,8 +739,6 @@ foxtrick.matches.wronglang=Фокстрик: Статистика не може 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
 foxtrick.matches.suppstats=Supporter статистика
-# Look on your Matches page: copy the header of the sold seats box
-foxtrick.matches.soldseats=Продате карте
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
